# DynastAI-Demo

./: .gitignore  README.md  main.py  pyproject.toml
cards/: cards.csv  old-cards.csv
fine-tuning/: README.md  tlr-grpo-reigns.py  unsloth-grpo-example.py  unsloth-grpo-reigns.py
results/init/claude-3.7-sonnet/: all_strategies_results.csv  openrouter_results.csv
results/init/gemini-2.5-flash-preview/: all_strategies_results.csv  openrouter_results.csv
results/init/gpt-4o/: all_strategies_results.csv  openrouter_results.csv
results/init/llama-4-scout/: all_strategies_results.csv  openrouter_results.csv
results/old/claude-3.7-sonnet/: all_strategies_results.csv  openrouter_results.csv
results/old/gemini-2.5-pro-preview/: all_strategies_results.csv  openrouter_results.csv
results/old/gpt-4o/: all_strategies_results.csv  openrouter_results.csv
results/old/llama-4-scout/: all_strategies_results.csv  openrouter_results.csv
results/old/qwen3-1.7b/: all_strategies_results.csv  openrouter_results.csv
simulation/: README.md  __init__.py  analysis.py  cards.py  engine.py  export.py  main.py  simulation.py  visualization.py
simulation/old/: game_analysis.py
simulation/strategies/: __init__.py  balanced.py  base.py  focus.py  random.py
simulation/strategies/llm_strategies/: __init__.py  aggressive.py  base.py  conservative.py  religious.py  stability_first.py
